--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -2,7 +2,7 @@
 - layout: left
   company: Dad Jokes API
   description: |
-    [Dad Joke API Tutorial] () // [Dad Joke API specification]()
+    [Dad Joke API Tutorial] [here](images/KurtNHeiss_cv.pdf) // [Dad Joke API specification]()
   
 - layout: left 
   company: UPS
