--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -6,7 +6,7 @@
 - layout: left 
   company: Roku
   description: | # this will include new lines to allow paragraphs
-     [Roku OneView Reporting API User Guide](https://drive.google.com/file/d/1dfTnWGz7GWvGHBep_L4WEmMevKH6yNko/view?usp=sharing) // [Roku OneView API Initiative](https://drive.google.com/file/d/1zn7iOUSXxhqqYs3uzMXUYAvFj7SkwcVV/view?usp=sharing) // [Roku platform overview](https://developer.roku.com/docs/features/features-overview.md) // [Roku Developers](https://developer.roku.com/docs/developer-program/media-playback/screensavers.md)
+     [Roku OneView Reporting API User Guide](https://drive.google.com/file/d/1dfTnWGz7GWvGHBep_L4WEmMevKH6yNko/view?usp=sharing) // [Roku OneView API Initiative](https://docs.google.com/presentation/d/1rqCaGLFCtmD13G5WnpceZLUkYKHwSsS-/edit?usp=sharing&ouid=111398279086437434307&rtpof=true&sd=true) // [Roku platform overview](https://developer.roku.com/docs/features/features-overview.md) // [Roku Developers](https://developer.roku.com/docs/developer-program/media-playback/screensavers.md)
   
 - layout: left 
   company: LinkedIn
