--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -2,7 +2,7 @@
 - layout: left 
   company: UPS
   description: | # this will include new lines to allow paragraphs
-     [Address Validation API](https://developer.ups.com/api/reference?loc=en_US#tag/AddressValidation_other) // [Rating API](https://developer.ups.com/api/reference?loc=en_US#tag/Rating_other) // [Time in Transit API](https://developer.ups.com/api/reference?loc=en_US#tag/TimeInTransit_other) // [Dangerous Goods API](https://developer.ups.com/api/reference?loc=en_US#tag/DangerousGoods_other)
+     [Address Validation API](https://developer.ups.com/api/reference?loc=en_US&tag=Address-Validation) // [Rating API](https://developer.ups.com/api/reference?loc=en_US&tag=Rating) // [Time in Transit API](https://developer.ups.com/tag/Time-in-Transit?loc=en_US&tag=Time-in-Transit) // [Dangerous Goods API](https://developer.ups.com/tag/Dangerous-Goods?loc=en_US&tag=Dangerous-Goods)
 - layout: left 
   company: Roku
   description: | # this will include new lines to allow paragraphs
