--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,4 +1,17 @@
 # Experience template
+
+- layout: left
+  company: Google
+  link: https://privacysandbox.com/intl/en_us/
+  job_title: Senior Technical Writer, Documentation & Process Improvement
+  dates: March 2024 to current
+  description: | # this will include new lines to allow paragraphs
+
+     Member of Google's Privacy Sandbox teams, collaborating with UK stakeholders and leveraging Markdown, Cider, and Critique for efficient documentation creation, code review, and file management.
+     Led process improvement initiatives by refining content iteratively, applying the Google Style Guide, and integrating Google Gemini AI for enhanced clarity and accuracy.
+     Championed and implemented a documentation workflow rooted in the 'documentation as code' approach, improving collaboration, repository management, and version control for the technical writing team.
+     Designed and streamlined a workflow for a five-person technical writing team, boosting productivity, ensuring timely documentation completion, and improving tracking of individual contributions.
+
 - layout: left
   company: UPS
   link: https://developer.ups.com/catalog?loc=en_US
