--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -7,10 +7,10 @@
   dates: March 2024 to current
   description: | # this will include new lines to allow paragraphs
 
-     – Collaborated with UK stakeholders and utilized Markdown, Cider, and Critique for efficient documentation creation, code review, and file management.
+     \– Collaborated with UK stakeholders and utilized Markdown, Cider, and Critique for efficient documentation creation, code review, and file management.
      - Process Improvement Leader – Refined content iteratively, applied the Google Style Guide, and integrated Google Gemini AI to enhance clarity and accuracy.
      - Documentation as Code Advocate – Championed and implemented a structured documentation workflow, improving collaboration, repository management, and version control.
-     - Workflow Designer & Team Coordinator – Developed and streamlined a documentation workflow for a five-person technical writing team, increasing productivity, ensuring timely completion, and improving contribution tracking.
+     - Workflow Designer & Team Coordinator – Developed and streamlined a documentation workflow for a five-person technical writing team, increasing productivity, ensuring timely completion, and improving contribution tracking.\
 
 - layout: left
   company: UPS
