--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -21,10 +21,10 @@
   dates: June to October 2023
   description: | # this will include new lines to allow paragraphs
 
-     Member of the API Governance team focused on developing OpenAPI YAML specification standards and acceptance protocol for organization-wide UPS engineering teams. 
-     Authoring and annotation of OpenAPI YAML specifications for internal and external developer portals. Enhancement and repurposing of legacy documentation. 
-     Mentor other technical writers and developers.
-
+     * Member of the API Governance team focused on developing OpenAPI YAML specification standards and acceptance protocol for organization-wide UPS engineering teams. 
+     * Authoring and annotation of OpenAPI YAML specifications for internal and external developer portals.
+     * Enhancement and repurposing of legacy documentation.
+     * Mentor other technical writers and developers.
 
 - layout: left
   company: Roku (Advertising and Developer Relations)
@@ -33,18 +33,11 @@
   dates: May 2022 - March 2023
   description: | # this will include new lines to allow paragraphs 
      
-     
-     I supported Roku’s OneView Ad Platform APIs and Partner Engineering Developer Relations projects. 
-     
-     I managed and developed the project initiative for the proposed forthcoming API Portal to showcase ad tech data availability from the Roku platform. 
-     
-     I was a member of the Roku Partner Engineering Developer Relations team which sought to better communicate concepts and procedures for how to create
-     the streaming app for the Roku platform. My latest project work included an overhaul of the current Developer docs and website. Additional project 
-     work included the development of Brightscript educational videos and associated documentation. I assist developers and product 
-     management in the creation and editing of partner documentation.
-     
-     I was a final editor and source of truth for information displayed on our documentation portals and provided ongoing iteration on improvements in 
-     display and content.     
+     * Supported Roku’s OneView Ad Platform APIs and Partner Engineering Developer Relations projects.
+     * Managed and developed the project initiative for the proposed forthcoming API Portal to showcase ad tech data availability from the Roku platform.
+     * Member of the Roku Partner Engineering Developer Relations team which sought to better communicate concepts and procedures for how to integrate with the Roku platform.
+     * Started overhaul of the current Developer docs and website.
+     * Development of Brightscript educational videos and associated documentation.    
      
 - layout: left
   company: LinkedIn
