--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -13,7 +13,6 @@
      * Championed and implemented a structured documentation workflow, improving collaboration, repository management, and version control.
      * Developed and streamlined a documentation workflow for the technical writing team, increasing productivity, ensuring timely completion, and improving contribution tracking.
 
-
 - layout: left
   company: UPS
   link: https://developer.ups.com/catalog?loc=en_US
@@ -46,18 +45,14 @@
   dates: September 2021 - May 2022
   description: | # this will include new lines to allow paragraphs
 
-     Supported LinkedIn’s Marketing Solutions - Partner Engineering team for the LinkedIn Marketing Developer Platform API. 
-     
-     Developed and edited external customer engineering documentation for the Marketing API library, role-based user access 
-     controls, infrastructure, systems, tools, and software engineering practices. The Marketing APIs enabled our customers to develop and 
-     design online posts, video ads, and other content for their services. 
-     
-     Designed and organized content for new API products. I gathered requirements for the customer support team to serve over more than 
-     2000 LinkedIn partners. Oversight and implementation of document version control (via Github) across the marketing documentation library 
-     in parallel with API version control. 
-     
-     I was a final editor and source of truth for information displayed on our partner documentation portal. I provided ongoing iteration on improvements in 
-     display and content.
+     * Supported LinkedIn’s Marketing Solutions - Partner Engineering team for the LinkedIn Marketing Developer Platform API.
+     * Developed and edited external customer engineering documentation for the Marketing API library, role-based user access 
+       controls, infrastructure, systems, tools, and software engineering practices. The Marketing APIs enabled our customers to develop and 
+       design online posts, video ads, and other content for their services.
+     * Designed and organized content for new API products.
+     * Gathered requirements for the customer support team to serve over more than 2000 LinkedIn partners.
+     * Oversight and implementation of document version control (via Github) across the marketing documentation library in parallel with API version control.
+     * Final editor and source of truth for information displayed on our partner documentation portal.
   
 - layout: left
   company: 8x8
@@ -66,9 +61,10 @@
   dates: January 2019 - August 2021
   description: | # this will include new lines to allow paragraphs
 
-     Development and management of the public-facing 8x8 Developer Hub. Created an API customer information strategy followed by enterprise stakeholders. 
-     Identified gaps in the user experience. Provided leadership to leverage the product’s strengths while boosting productivity, organization, and personal 
-     accountability among stakeholders.	
+     * Development and management of the public-facing 8x8 Developer Hub.
+     * Created an API customer information strategy followed by enterprise stakeholders.
+     * Identified gaps in the user experience.
+     * Provided leadership to leverage the product’s strengths while boosting productivity, organization, and personal accountability among stakeholders.	
      
  #    APIs, Apigee Edge usage and administration, SwaggerHub usage and administration, Github, Stoplight, markdown, Postman, HTML, CSS, JIRA, OpenAPI, JSON, XML, Google docs and sites, Confluence authoring and management, Jupyter notebooks, Linux, UNIX, Salesforce, Visual Studio Code, Agile software development, Microsoft Office Suite
 
