--- a/_config.yml
+++ b/_config.yml
@@ -42,9 +42,9 @@ about_content: | # this will include new lines to allow paragraphs
 more_content: | # this will include new lines to allow paragraphs
   In my free time, I like to learn new skills, hone my artistic interests, and exercise. 
   
-  Taking AI, Project Management, and API coursework on Coursera.
+  Currently enrolled and taking Coursera courses in [Generative AI Learning Path](https://www.coursera.org/specializations/introduction-to-generative-ai?), [Google Project Management certification](https://www.coursera.org/professional-certificates/google-project-management), and [Google API Development](https://www.coursera.org/learn/api-development-apigee-gcp).
   
-  Some of my other interests and hobbies are:
+  Some of my interests and hobbies are:
   
    - Surfing
    - Swimming 
