--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,9 +1,9 @@
-# Experience template
+pert# Experience template
 
 - layout: left
-  company: Google
+  company: Expert Support 
   link: https://privacysandbox.com/intl/en_us/
-  job_title: Senior Technical Writer, Documentation & Process Improvement
+  job_title: Senior Technical Writer, Documentation & Process Improvement, Google Privacy Sandbox project
   dates: March 2024 to current
   description: | # this will include new lines to allow paragraphs
 
