--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -3,7 +3,7 @@ pert# Experience template
 - layout: left
   company: Expert Support 
   link: https://privacysandbox.com/intl/en_us/
-  job_title: Senior Technical Writer, Documentation & Process Improvement, Google Privacy Sandbox project
+  job_title: Senior Technical Writer, Documentation and Process Improvement, Google Privacy Sandbox project
   dates: March 2024 to current
   description: | # this will include new lines to allow paragraphs
 
