--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -3,8 +3,8 @@ pert# Experience template
 - layout: left
   company: "Expert Support - The Technical Writing Company"
   link: "https://privacysandbox.com/intl/en_us/"
-  job_title: "Senior Technical Writer: Documentation and Process Improvement, Google Privacy Sandbox Project"
-  dates: March 2024 to current
+  job_title: "Senior Technical Writer - Documentation and Process Improvement, Google Privacy Sandbox Project"
+  dates: "March 2024 to current"
   description: | # this will include new lines to allow paragraphs
 
      * Member of the Privacy Sandbox team focused on creating and improving the developer documentation experience.
