--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,7 +1,7 @@
 # Experience template
 
 - layout: left
-  company: "Expert Support - The Technical Writing Company"
+  company: "[Expert Support – The Technical Writing Company](https://expertsupport.com)"
   link: "https://privacysandbox.com/intl/en_us/"
   job_title: "Senior Technical Writer – Documentation and Process Improvement, Google Privacy Sandbox Project"
   dates: "March 2024 to current"
