--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -2,11 +2,11 @@
 
 - layout: left
   company: "Expert Support – The Technical Writing Company"
-  link: "https://privacysandbox.com/intl/en_us/"
+  link: "https://expertsupport.com/"
   job_title: "Senior Technical Writer – Documentation and Process Improvement, Google Privacy Sandbox Project"
   dates: "March 2024 to current"
   description: |
-    * Member of the Privacy Sandbox team focused on creating and improving the developer documentation experience.
+    * Member of the Google Privacy Sandbox team focused on creating and improving the developer documentation experience.
     * Use Markdown, Cider, and Critique for efficient documentation creation, code review, and file management.
     * Refine content iteratively, apply the Google Style Guide, and integrate Google Gemini AI to enhance clarity and accuracy.
     * Championed and implemented a structured documentation workflow, improving collaboration, repository management, and version control.
