--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,9 @@ about_content: | # this will include new lines to allow paragraphs
 # Experience Section
 # experience_title: Experience
 
+# Projects Section
+# projects_title: Projects
+
 # Education Section
 # educaton_title: Education
 
