--- a/_config.yml
+++ b/_config.yml
@@ -24,13 +24,15 @@ youtube_username: kurtnheiss
 # about_title: About Me
 about_profile_image: images/profile.png
 about_content: | # this will include new lines to allow paragraphs
-  Hi, I’m Kurt
 
-  I’m a technical writer and developer relations professional specializing in API documentation, developer guides, and technical content strategy. With extensive experience at both established tech giants and startups, I bridge the gap between complex technologies and clear, developer-friendly documentation.
+I am a technical content and developer experience leader specializing in API Documentation, Generative AI (LLM) literacy, and high-stakes content strategy. I bridge the gap between complex engineering and clear, developer-friendly execution.
 
-  My work focuses on creating high-quality API reference materials, tutorials, and DevRel content that empower developers to build, integrate, and innovate. I’m passionate about improving developer experience through well-structured documentation and engaging technical content.
+With over 10 years of experience at tech giants like Google, Roku, and LinkedIn, my focus is on delivering top-tier results in complex, fast-paced environments . My commitment to disciplined execution is evidenced by my Master of Business Administration (MBA) from Santa Clara University, where I was consistently chosen as Project Manager and earned the highest Capstone grade for my cohort.
 
-  Currently based in San Jose, I’ve lived and worked in San Francisco, Orange County, Long Beach, and Seattle. I hold an MBA from Santa Clara University and a BS in Zoology from the University of Washington.
+I am fluent in modern Documentation-as-Code (DaC) methodologies and have proactively invested in the skills necessary for the future of tech, including the Google Project Management Certification and training in AI Strategy (Andrew Ng's 'AI for Everyone') and AI Implementation (Google AI Essentials/Python). I am energized by intellectual challenges and dedicated to securing a long-term, high-impact role where I can apply a strategic, full-time commitment to driving corporate success.
+
+I hold a BS in Zoology from the University of Washington and am currently based in San Jose, CA.
+  
 # Experience Section
 # experience_title: Experience
 
