--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -18,10 +18,10 @@
   dates: June to October 2023
   description: | # this will include new lines to allow paragraphs
 
-     * Member of the API Governance team focused on developing OpenAPI YAML specification standards and acceptance protocol for organization-wide UPS engineering teams. 
-     * Authoring and annotation of OpenAPI YAML specifications for internal and external developer portals.
-     * Enhancement and repurposing of legacy documentation.
-     * Mentor other technical writers and developers.
+     * Led API documentation governance and standards for UPS, designing the OpenAPI YAML specification and acceptance protocols for organization-wide engineering teams.
+     * Authored and annotated robust OpenAPI YAML specifications to drive the clarity and consistency of documentation across internal and external developer portals.
+     * Refactored and enhanced legacy documentation to align with modern industry standards and improve developer experience.
+     * Mentored technical writers and developers on API best practices and documentation lifecycle management.
 
 - layout: left
   company: Roku (Advertising and Developer Relations)
@@ -30,11 +30,10 @@
   dates: May 2022 - March 2023
   description: | # this will include new lines to allow paragraphs 
      
-     * Supported Roku’s OneView Ad Platform APIs and Partner Engineering Developer Relations projects.
-     * Managed and developed the project initiative for the proposed forthcoming API Portal to showcase ad tech data availability from the Roku platform.
-     * Member of the Roku Partner Engineering Developer Relations team which sought to better communicate concepts and procedures for how to integrate with the Roku platform.
-     * Started overhaul of the current Developer docs and website.
-     * Development of Brightscript educational videos and associated documentation.    
+     * Led Developer Experience (DX) strategy and documentation for Roku’s OneView Ad Platform APIs and Partner Engineering initiatives.
+     * Managed and developed the project proposal and initial implementation for the forthcoming API Portal, designed to showcase ad tech data availability and streamline developer integration.
+     * Spearheaded the overhaul of core Developer documentation and the public website, adopting user-centric approaches to enhance clarity and usability across the Roku platform.
+     * Created BrightScript educational videos and associated technical documentation to simplify platform integration procedures for partner engineers.
      
 - layout: left
   company: LinkedIn
@@ -42,15 +41,10 @@
   job_title: Marketing Developer Documentation & Release Manager
   dates: September 2021 - May 2022
   description: | # this will include new lines to allow paragraphs
-
-     * Supported LinkedIn’s Marketing Solutions - Partner Engineering team for the LinkedIn Marketing Developer Platform API.
-     * Developed and edited external customer engineering documentation for the Marketing API library, role-based user access 
-       controls, infrastructure, systems, tools, and software engineering practices. The Marketing APIs enabled our customers to develop and 
-       design online posts, video ads, and other content for their services.
-     * Designed and organized content for new API products.
-     * Gathered requirements for the customer support team to serve over more than 2000 LinkedIn partners.
-     * Oversight and implementation of document version control (via Github) across the marketing documentation library in parallel with API version control.
-     * Final editor and source of truth for information displayed on our partner documentation portal.
+     * Managed and implemented the Documentation-as-Code (DaC) system and version control strategy (GitHub) for the entire LinkedIn Marketing Developer Platform API library, ensuring documentation aligned precisely with parallel API version releases.
+     * Led content strategy and documentation for new Marketing API products, focusing on external customer engineering needs, role-based user access controls, and infrastructure.
+     * Developed comprehensive documentation for APIs enabling customers to create online posts, video ads, and other content, directly supporting the Marketing Solutions - Partner Engineering team.
+     * Served as the final editor and source of truth for all information displayed on the partner documentation portal, supporting a user base of over 2,000 LinkedIn partners.
   
 - layout: left
   company: 8x8
@@ -58,11 +52,10 @@
   job_title: Technical Program Manager/Developer Relations
   dates: January 2019 - August 2021
   description: | # this will include new lines to allow paragraphs
-
-     * Development and management of the public-facing 8x8 Developer Hub.
-     * Created an API customer information strategy followed by enterprise stakeholders.
-     * Identified gaps in the user experience.
-     * Provided leadership to leverage the product’s strengths while boosting productivity, organization, and personal accountability among stakeholders.	
+   * Spearheaded the development and launch of the public-facing 8x8 Developer Hub, managing the project from inception to deployment.
+   * Established and executed a clear API customer information strategy that was adopted and leveraged by key enterprise stakeholders across the organization.
+   * Identified critical gaps in the developer user experience (UX) and designed documentation solutions to streamline integration and improve adoption.
+   * Provided leadership to stakeholders, boosting team productivity and organizational accountability by leveraging product strengths and clarifying goals.
      
  #    APIs, Apigee Edge usage and administration, SwaggerHub usage and administration, Github, Stoplight, markdown, Postman, HTML, CSS, JIRA, OpenAPI, JSON, XML, Google docs and sites, Confluence authoring and management, Jupyter notebooks, Linux, UNIX, Salesforce, Visual Studio Code, Agile software development, Microsoft Office Suite
 
