--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -3,8 +3,8 @@
 - layout: left
   company: "Expert Support – The Technical Writing Company"
   link: "https://expertsupport.com/"
-  job_title: "Senior Technical Writer – Documentation and Process Improvement, Google Privacy Sandbox Project"
-  dates: "March 2024 to current"
+  job_title: "Senior Technical Lead, Privacy Sandbox Initiative, Expert Support (ESI) Contractor, Google, San Jose, CA (remote) "
+  dates: "March 2024 to October 2025"
   description: | # this will include new lines to allow paragraphs
     
     * Led documentation for the Google Privacy Sandbox team, focusing on optimizing the developer experience (DX) and technical content strategy for complex, evolving toolsets.
