--- a/_data/education.yml
+++ b/_data/education.yml
@@ -2,21 +2,22 @@
   name: Santa Clara University, Leavey School of Business
   qualification: Master of Business Administration - 2014 (focus on Management and Marketing)
   description: | # this will include new lines to allow paragraphs
-    My business knowledge and acumen were enhanced along with development of key project management, leadership, and writing skills:
-    
-    - Completing challenging courses that required preparation and study to facilitate active participation.
-    - Leading course project cohorts with classmates from different career backgrounds and disparate global locations to meet curriculum deadlines.
-    - Working full-time and managing my son's various sports teams was an excellent test of my reslience, resolve, motivation, adaptability, and fortitude.
+    My pursuit of an MBA was a strategic investment that developed certified project management and leadership skills, while enhancing my business acumen:
+     
+     * Project Leadership and Execution: Consistently chosen as the project manager for course cohorts comprised of classmates from diverse global and career backgrounds, successfully leading teams to meet complex curriculum deadlines.
+     * Strategic Delivery Proof: Demonstrated top-tier execution and proficiency by earning the highest grade in the Capstone course for the entire graduating cohort, proving my ability to deliver excellent results on final, complex strategic projects.
+     * Sustained Discipline and Resilience: Tested and proved my resilience, adaptability, and motivation by successfully completing the demanding evening program while simultaneously working full-time, raising a family, and managing my son's various sports teams.
 
 - layout: left
   name: University of Washington
   qualification: Bachelor of Science in Zoology
   description: | # this will include new lines to allow paragraphs
     Completion of my degree facilitated an Environmental Scientist career:
-     
-     - Managing enivironmental investigations per governmental regulatory mandates.
-     - Collecting and analyzing environmental data for real estate due diligence transactions.
-     - Development, implementation, and enforcement of health and safety protocols.
+    
+    * Applied scientific training to a career in environmental science, focusing on regulatory compliance and systematic data analysis.
+    * Systematically collected and analyzed environmental data to support critical real estate due diligence transactions.
+    * Managed environmental investigations, ensuring strict adherence to complex governmental regulatory mandates.
+    * Developed, implemented, and enforced critical Health and Safety protocols—proving proficiency in creating and governing essential organizational processes.
 
     
 
