--- a/_config.yml
+++ b/_config.yml
@@ -46,24 +46,18 @@ about_content: | # this will include new lines to allow paragraphs
 # More Section
 # more_title: A Little More About Me
 more_content: | # this will include new lines to allow paragraphs
-  In my free time, I like to learn new skills, hone my artistic interests, and exercise. 
+  A Little More About Me: Sustained Vigor and Curiosity
   
-  Currently enrolled and taking Coursera courses in [Generative AI Learning Path](https://www.coursera.org/specializations/introduction-to-generative-ai?), [Google Project Management certification](https://www.coursera.org/professional-certificates/google-project-management), and [Google API Development](https://www.coursera.org/learn/api-development-apigee-gcp).
-  
-  Some of my interests and hobbies are:
-  
-   - Surfing
-   - Swimming 
-   - Weight training
-   - Hiking
-   - Writing screenplays
-   - Clay and papier mache sculpting
-   - Trying different techniques on the guitar and bass
-   - Learning to create music via Logic
-   - Returning to study of the cello
-   - Learning German and Dutch
-   - Reading
-   - Cooking
+  I believe in continuous self-investment and maintaining the vitality required for a demanding professional life. My free time is dedicated to rigorous self-improvement, physical fitness, and intellectual challenge:
+
+   * Continuous Skill Acquisition: I actively pursue new competencies that align with both professional growth and personal passion. I am currently enrolled in Coursera's Generative AI Learning Path (including Andrew Ng's 'AI for Everyone'), completing the Google Project Management Certification, and studying Google API Development and Python Programming.
+   * Physical and Creative Disciplines: My personal interests reflect a commitment to complex, structured challenges:
+
+     * Physical: Surfing, Swimming, Weight Training, and Hiking.
+
+     * Creative & Intellectual: Writing screenplays, sculpting (clay and papier mâché), studying the cello, trying new techniques on the guitar/bass, creating music via Logic, and learning languages (German and Dutch).
+
+   * Focus on Structure: Like my professional life, I enjoy the structure of reading and cooking, which provides focus and creative challenge outside of the office.
 
 # Footer
 footer_show_references: true
