--- a/_config.yml
+++ b/_config.yml
@@ -44,16 +44,18 @@ about_content: | # this will include new lines to allow paragraphs
 # educaton_title: Education
 
 # More Section
-# more_title: A Little More About Me
+# more_title: A Little More About Me: Sustained Vigor and Curiosity
 more_content: | # this will include new lines to allow paragraphs
-  A Little More About Me: Sustained Vigor and Curiosity
   
-  I believe in continuous self-investment and maintaining the vitality required for a demanding professional life. My free time is dedicated to rigorous self-improvement, physical fitness, and intellectual challenge:
+  I believe in continuous self-investment and maintaining the vitality required for a demanding professional life.
+  
+  My free time is dedicated to rigorous self-improvement, physical fitness, and intellectual challenge:
 
    * Continuous Skill Acquisition: I actively pursue new competencies that align with both professional growth and personal passion. I am currently enrolled in Coursera's Generative AI Learning Path (including Andrew Ng's 'AI for Everyone'), completing the Google Project Management Certification, and studying Google API Development and Python Programming.
+   
    * Physical and Creative Disciplines: My personal interests reflect a commitment to complex, structured challenges:
 
-     * Physical: Surfing, Swimming, Weight Training, and Hiking.
+     * Physical: Surfing, Swimming, Weight Training, Biking, and Hiking.
 
      * Creative & Intellectual: Writing screenplays, sculpting (clay and papier mâché), studying the cello, trying new techniques on the guitar/bass, creating music via Logic, and learning languages (German and Dutch).
 
