--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ about_content: | # this will include new lines to allow paragraphs
 
   With over 10 years of experience at tech giants like Google, Roku, and LinkedIn, my focus is on delivering top-tier results in complex, fast-paced environments.
 
-  I am fluent in modern Documentation-as-Code (DaC) methodologies and have proactively invested in the skills necessary for the future of tech, including the Google Project Management Certification and training in AI Strategy (Andrew Ng's 'AI for Everyone') and AI Implementation (Google AI Essentials/Python). I am energized by intellectual challenges and dedicated to securing a long-term, high-impact role where I can apply a strategic, full-time commitment to driving corporate success.
+  I am fluent in modern Documentation-as-Code (DaC) methodologies and have proactively invested in the skills necessary for the future of tech, including the Google Project Management Certification and training in AI strategy and implementation. I am energized by intellectual challenges and dedicated to securing a long-term, high-impact role where I can apply a strategic, full-time commitment to driving corporate success.
 
   I hold an MBA from the Santa Clara University, Leavey School of Business and a BS in Zoology from the University of Washington.
  
