--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ more_content: | # this will include new lines to allow paragraphs
   
   My free time is dedicated to rigorous self-improvement, physical fitness, and intellectual challenge:
 
-   * Continuous Skill Acquisition: I actively pursue new competencies that align with both professional growth and personal passion. I am currently enrolled in Coursera's Generative AI Learning Path (including Andrew Ng's 'AI for Everyone'), completing the Google Project Management Certification, and studying Google API Development and Python Programming.
+   * Continuous Skill Acquisition: I actively pursue new competencies that align with both professional growth and personal passion. I am currently enrolled in Coursera's Generative AI Learning Path, completing the Google Project Management Certification, and studying Google API Development and Python Programming.
    
    * Physical and Creative Disciplines: My personal interests reflect a commitment to complex, structured challenges:
 
