--- a/_config.yml
+++ b/_config.yml
@@ -47,19 +47,19 @@ about_content: | # this will include new lines to allow paragraphs
 # more_title: A Little More About Me: Sustained Vigor and Curiosity
 more_content: | # this will include new lines to allow paragraphs
   
-  I believe in continuous self-investment and maintaining the vitality required for a demanding professional life.
-  
-  My free time is dedicated to rigorous self-improvement, physical fitness, and intellectual challenge:
+I believe in sustained vigor and unwavering focus, treating personal development as an extension of professional excellence. My high energy and dedication to structure are constants, ensuring I am always prepared for the next challenge.
 
-   * Continuous Skill Acquisition: I actively pursue new competencies that align with both professional growth and personal passion. I am currently enrolled in Coursera's Generative AI Learning Path, completing the Google Project Management Certification, and studying Google API Development and Python Programming.
-   
-   * Physical and Creative Disciplines: My personal interests reflect a commitment to complex, structured challenges:
+My free time is dedicated to rigorous, high-value self-investment that aligns with future career goals:
 
-     * Physical: Surfing, Swimming, Weight Training, Biking, and Hiking.
+* Continuous Skill Acquisition: I actively pursue new competencies that align with both professional growth and personal passion. I am completing the Google Project Management Certification and the Generative AI Learning Path, alongside studying Google API Development and Python Programming.
 
-     * Creative & Intellectual: Writing screenplays, sculpting (clay and papier mâché), studying the cello, trying new techniques on the guitar/bass, creating music via Logic, and learning languages (German and Dutch).
+* Focus on Structure: Like my professional life, I thrive on structure and process. I enjoy the controlled challenge of reading and cooking, which provides focus and creative balance outside of the office.
 
-   * Focus on Structure: Like my professional life, I enjoy the structure of reading and cooking, which provides focus and creative challenge outside of the office.
+My personal interests reflect a commitment to complex, structured challenges that maintain mental and physical resilience:
+
+* Physical Conditioning: Surfing, Swimming, Weight Training, Biking, and Hiking—routines specifically designed for sustained energy and maintaining the vitality required for demanding professional life.
+
+* Creative & Intellectual Pursuits: Writing screenplays, sculpting (clay and papier mâché), advanced music study (cello, guitar/bass, creating music via Logic), and learning languages (German and Dutch).
 
 # Footer
 footer_show_references: true
